## Version 1.3 (xxxx-xx-xx)
* New closure "$pos" to get the n-th key
* Added argument suppressMessages to sail
* sail now sources files in their respective directory

## Version 1.2 (2013-09-18)
* New argument "simplify" to enforce lists to be returned
* New object "sail" to access R source files
* Closure "$assign" now returns keys of assigned objects
* Closure "$clear" now returns keys of cleared objects


## Version 1.1 (2013-02-05)
* New closure "$assign"
* New closure "$mapply"
* New argument in closure "$put": keys
* Improved error messages
* Relaxed checks for illegal characters in keys


## Version 1.0 (2012-12-04)
* Initial release on CRAN